feat(tracing-refactoring)[QA-13610] Tracing object for steps and csv check